// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage debe de mostrar el componente con la imagen del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Product"
    className="productImg undefined"
    src="https://img.jpg"
  />
</div>
`;

exports[`ProductImage debe de mostrar el componente correctamente el productImage 1`] = `
<img
  alt="Product"
  className="productImg undefined"
  src="https://img.jpg"
/>
`;
